Add class on main-navigation items to distinguish them

--- a/ui/main-sidebar/main-navigation.reel/main-navigation.html
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation.html
@@ -22,7 +22,7 @@
         },
 
         "item": {
-            "prototype": "ui/main-sidebar/main-navigation.reel/main-navigation-item.reel",
+            "prototype": "./main-navigation-item.reel",
             "properties": {
                 "element": {"#": "item"}
             },
