Polish the container creator and reader inspectors.

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -12,6 +12,7 @@
                 "_commandComponent": {"@": "command"},
                 "_nameComponent": {"@": "name"},
                 "_imageComponent": {"@": "image"},
+                "_volumesComponent": {"@": "volumes"},
                 "_portsComponent": {"@": "ports"},
                 "_environmentComponent": {"@": "environment"}
             },
