Display docker host name instead of its id

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -118,7 +118,7 @@
                 "label": "Host"
             },
             "bindings": {
-                "value": {"<-": "@owner.object.host"}
+                "value": {"<-": "@owner._dockerHosts.filter{id == @owner.object.host}.one().name"}
             }
         },
 
