Make _hasEvent property in calendar-list private

--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('is-empty')": {"<-": "!@days.content.some{hasEvents}"}
+                "classList.has('is-empty')": {"<-": "!@days.content.some{_hasEvents}"}
             }
         },
         "days": {
