Block image pulling [demo purpose]

--- a/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
+++ b/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
@@ -19,7 +19,7 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "canDelete": false,
-                "canSave": true,
+                "canSave": false,
                 "canRevert": false,
                 "controller": {"@": "owner"}
             },
