adds bg color and spaces out titles

--- a/ui/sections/network/inspectors/overview.reel/overview.html
+++ b/ui/sections/network/inspectors/overview.reel/overview.html
@@ -115,17 +115,17 @@
                 <div class="Overview-content">
                     <div data-montage-id="hostname"></div>
 
-                    <div data-montage-id="interfacesSectionTitle" class="g-negative-margin-top"></div>
+                    <div data-montage-id="interfacesSectionTitle"></div>
                     <div data-montage-id="interfaces">
                         <div data-montage-id="interface"></div>
                     </div>
 
-                    <div data-montage-id="nameserversSectionTitle" class="flush-top"></div>
+                    <div data-montage-id="nameserversSectionTitle"></div>
                     <div data-montage-id="nameserverRepetition">
                         <div data-montage-id="nameserver"></div>
                     </div>
 
-                    <div data-montage-id="defaultRouteSectionTitle" class="flush-top"></div>
+                    <div data-montage-id="defaultRouteSectionTitle"></div>
                     <div data-montage-id="defaultRouteIpv4"></div>
                     <div data-montage-id="defaultRouteIpv6"></div>
 
