Display all the names of a container within the inspector

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -71,10 +71,10 @@
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Names"
             },
             "bindings": {
-                "value": {"<-": "@owner.object.names.0"}
+                "value": {"<-": "@owner.object.names.join(' ')"}
             }
         },
 
