--- a/ui/inspectors/crypto-certificate.reel/crypto-certificate-creation.reel/crypto-certificate-creation.html
+++ b/ui/inspectors/crypto-certificate.reel/crypto-certificate-creation.reel/crypto-certificate-creation.html
@@ -49,8 +49,18 @@
                 "selectedValue": {"<->": "@owner.object.key_length"}
             }
         },
+        "liftTimeConverterValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "errorMessage": "Value must be an integer"
+            }
+        },
         "numberConverter": {
-            "prototype": "core/converter/string-to-integer-converter"
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "liftTimeConverterValidator"}
+            }
         },
         "lifetime": {
             "prototype": "blue-shark/ui/field-text-input.reel",
