adds margin below container button controls

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -22,7 +22,7 @@
                 "disabled": {"<-": "@owner.object.status.toLowerCase().startsWith('up')"}
             }
         },
-        
+
         "stop": {
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
@@ -209,13 +209,11 @@
 <body>
     <div data-montage-id="owner" class="Container">
         <div data-montage-id="inspector">
-            <!--FIXME: @JOSHUA CSS [START]-->
-            <div>
+            <div class="g-margin-bottom">
                 <div data-montage-id="start"></div>
                 <div data-montage-id="stop"></div>
                 <div data-montage-id="serialConsole"></div>
             </div>
-            <!--FIXME: @JOSHUA CSS [END]-->
 
             <div data-montage-id="image"></div>
             <div data-montage-id="name"></div>
