--- a/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
+++ b/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
@@ -107,7 +107,7 @@
             },
             "bindings": {
                 "options": {"<-": "[{label: '---', value: null}].concat(@owner._availableHosts.map{{label: name, value: id}})"},
-                "selectedValue": {"<-": "@dockerHostSelect.options.one().value"}
+                "selectedValue": {"<->": "@owner._selectedHost"}
             }
         }
     }
