Rename FTP fields to the max
Ticket: #18257

--- a/ui/inspectors/service.reel/ftp-service.reel/ftp-service.html
+++ b/ui/inspectors/service.reel/ftp-service.reel/ftp-service.html
@@ -53,7 +53,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "max_clients"},
-                "label": "Clients",
+                "label": "Max Clients",
                 "converter": {"@": "maxClientsConverter"}
             },
             "bindings": {
@@ -78,7 +78,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "ip_connections"},
-                "label": "Connections",
+                "label": "Max Connections",
                 "converter": {"@": "ipConnectionsConverter"}
             },
             "bindings": {
@@ -103,7 +103,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "login_attempt"},
-                "label": "Login Attempts",
+                "label": "Max Login Attempts",
                 "converter": {"@": "loginAttemptConverter"}
             },
             "bindings": {
